traces/bug_505.txt
src/libMesh/eigenv.c:517: error: DEAD_STORE
  The value written to &ux (type double) is never used.
Showing all 1 steps of the trace


src/libMesh/eigenv.c:517:3: Write of unused value
515.   
516.     /* init */
517.     ux = 1.0;
         ^
518.     uy = 0.0;
519.   
